...
    "Birthday" : {

    },
    "Birthing Center" : {

    },
    "Cancel" : {

    },
    "Close" : {

    },
    "Confirm Password" : {
...
    "Delete Profile" : {

    },
    "Delivered" : {

    },
    "Deliveries" : {

    },
    "Deliveries In The Last 6 Months" : {

    },
    "Deliveries This Week" : {
...
            "state" : "translated",
            "value" : "姓名"
          }
        }
      }
    },
    "New Delivery" : {

    },
    "Next" : {

    },
    "Nick Molargik" : {
...
    "Restart Onboarding" : {

    },
    "Role" : {

    },
    "Save" : {

    },
    "Save Changes" : {

    },
    "Saving..." : {
...
    "Select Your Birthday" : {

    },
    "Select Your Role" : {

    },
    "Settings" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuración"
          }
...
    "Sorry we are missing your hospital. Please provide its name and we will take it from there!" : {

    },
    "Spread Your Wings!" : {

    },
    "Stork" : {

    },
    "Stork is a labor and delivery app designed to assist nurses and doctors in managing delivery statistics over time." : {

    },
    "Stork Monthly" : {
...
